--- a/packages/utils/index.html
+++ b/packages/utils/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>test</title>
-  <script src="./dist/index.global.js"></script>
+  <script src="./dist/index.iife.js"></script>
   <script>
     console.log('uuid:', Tomjs.uuid())
     console.log('uuid32:', Tomjs.uuid32())
