chore: update deps

--- a/packages/utils/index.html
+++ b/packages/utils/index.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>test</title>
+    <script src="./dist/index.iife.js"></script>
+    <script>
+      console.log('uuid:', Tomjs.uuid());
+      console.log('uuid32:', Tomjs.uuid32());
+      console.log('uuid36:', Tomjs.uuid36());
+    </script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test</title>
-  <script src="./dist/index.iife.js"></script>
-  <script>
-    console.log('uuid:', Tomjs.uuid())
-    console.log('uuid32:', Tomjs.uuid32())
-    console.log('uuid36:', Tomjs.uuid36())
-  </script>
-</head>
-
-<body>
-
-</body>
-
+  <body></body>
 </html>
